<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_course"
        android:icon="@drawable/ic_home"
        android:title="@string/home_fragment" />

    <item
        android:id="@+id/navigation_my_course"
        android:icon="@drawable/ic_course"
        android:title="@string/courses_fragment" />

    <item
        android:id="@+id/navigation_wishlist"
        android:icon="@drawable/ic_favourite"
        android:title="@string/favourite_courses_fragment" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_fragment"
        android:iconTint="@color/colorPrimary"/>
</menu>
