<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradinent"
    android:orientation="vertical"
    android:id="@+id/mainContainer">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="73dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/raleway"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textFontWeight="600"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edittext"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:fontFamily="@font/raleway"
        android:drawableStart="@drawable/ic_envelope"
        android:hint="@string/mail"
        android:drawablePadding="12dp"
        android:textSize="16sp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="20.5dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/raleway"
            android:layout_marginHorizontal="15dp"
            android:drawableStart="@drawable/ic_fingerprint"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawablePadding="12dp"
            android:textSize="16sp"
            android:paddingEnd="14dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="20.5dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="15dp">
        <TextView
            android:id="@+id/resetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#EAEAEA"
            android:fontFamily="@font/raleway"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:text="@string/forgotPass"
            android:onClick="openDialogFragment"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textAllCaps="false"
            android:layout_weight="2"
            android:textSize="13sp"
            android:textFontWeight="600"
            android:fontFamily="@font/raleway"
            android:layout_marginLeft="90dp"
            android:background="@drawable/background_false_enabled"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:onClick="logIn"
            />
    </LinearLayout>
    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        app:SpinKit_Color="@color/textColorGrey"
        android:visibility="gone"
        android:elevation="200dp"
        android:layout_gravity="center"
        style="@style/SpinKitView.Circle"/>
    <Button
        android:id="@+id/enter_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterwithgoogle"
        android:textColor="#000"
        android:drawableLeft="@drawable/icon_google"
        android:paddingStart="58dp"
        android:paddingEnd="102dp"
        android:fontFamily="@font/raleway"
        android:layout_marginTop="12dp"
        android:textAllCaps="false"
        android:paddingVertical="18dp"
        android:textSize="14sp"
        android:textFontWeight="400"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/background_edittext"
        android:onClick="regByGoogle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_weight="1"
            android:textFontWeight="600"
            android:fontFamily="@font/raleway"
            android:layout_marginTop="25dp"/>
        <TextView
            android:id="@+id/tv_create_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_acc"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textFontWeight="600"
            android:fontFamily="@font/raleway"
            android:drawableRight="@drawable/ic_handpointing"
            android:layout_marginTop="25dp"
            android:onClick="signUp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/terms_of_use_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term_od_use"
        android:textAlignment="center"
        android:layout_marginHorizontal="53dp"
        android:textColor="#EAEAEA"
        android:fontFamily="@font/raleway"
        android:textSize="13sp"
        android:layout_marginTop="250dp"/>
</LinearLayout>