<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradinent"
    android:orientation="vertical">
    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        app:SpinKit_Color="@color/textColorGrey"
        android:visibility="gone"
        android:elevation="200dp"
        android:layout_gravity="center"
        style="@style/SpinKitView.Circle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="73dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/raleway"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textFontWeight="600"
        android:textSize="24sp" />
    <EditText
        android:id="@+id/et_registration_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:background="@drawable/background_edittext"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:layout_marginHorizontal="15dp"
        android:drawableStart="@drawable/ic_envelope"
        android:hint="@string/mail"
        android:drawablePadding="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="20.5dp"/>
    <EditText
        android:id="@+id/et_registration_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:textSize="16sp"
        android:background="@drawable/background_edittext"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:drawableStart="@drawable/ic_usercircle"
        android:hint="@string/username"
        android:drawablePadding="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="20.5dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="10dp">
    <EditText
        android:id="@+id/et_registration_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:background="@drawable/background_edittext"
        android:layout_marginHorizontal="15dp"
        android:paddingEnd="14dp"
        android:drawableStart="@drawable/ic_fingerprint"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:drawablePadding="12dp"
        android:paddingTop="12dp"
        android:textSize="16sp"
        android:paddingBottom="12dp"
        android:paddingStart="20.5dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="15dp">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_false_enabled"
            android:fontFamily="@font/raleway"
            android:onClick="register"
            android:text="@string/enter"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textFontWeight="600"
            android:textSize="14sp" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterwithgoogle"
        android:textColor="#000"
        android:drawableLeft="@drawable/icon_google"
        android:fontFamily="@font/raleway"
        android:layout_marginTop="62dp"
        android:paddingStart="58dp"
        android:paddingEnd="102dp"
        android:textAllCaps="false"
        android:paddingVertical="18dp"
        android:textSize="14sp"
        android:textFontWeight="400"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/background_edittext"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_weight="1"
            android:textFontWeight="600"
            android:fontFamily="@font/raleway"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/tv_already_have_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="19dp"
            android:drawableRight="@drawable/ic_handpointing"
            android:fontFamily="@font/raleway"
            android:text="@string/already_have_acc"
            android:textColor="@color/white"
            android:textFontWeight="600"
            android:textSize="14sp"
            android:onClick="signIn"/>
    </LinearLayout>
    <TextView
        android:id="@+id/terms_of_use_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term_od_use"
        android:textAlignment="center"
        android:layout_marginHorizontal="53dp"
        android:fontFamily="@font/raleway"
        android:textFontWeight="500"
        android:textColor="#EAEAEA"
        android:textSize="13sp"
        android:layout_marginTop="130dp"/>
</LinearLayout>