<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_gradinent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="73dp"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/raleway"
        android:text="@string/newPassword"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textFontWeight="600"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edittext"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:fontFamily="@font/raleway"
        android:drawableStart="@drawable/ic_envelope"
        android:hint="@string/mail"
        android:drawablePadding="12dp"
        android:textSize="16sp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="20.5dp"/>
    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edittext"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/raleway"
        android:layout_marginHorizontal="15dp"
        android:drawableStart="@drawable/ic_fingerprint"
        android:hint="@string/newPassword"
        android:drawablePadding="12dp"
        android:textSize="16sp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="20.5dp"/>
    <EditText
        android:id="@+id/et_login_password_recovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edittext"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/raleway"
        android:layout_marginHorizontal="15dp"
        android:drawableStart="@drawable/ic_key"
        android:hint="@string/recoveryPassword"
        android:drawablePadding="12dp"
        android:textSize="16sp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="20.5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:textSize="13sp"
            android:textFontWeight="600"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetPassword"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:textFontWeight="600"
            android:fontFamily="@font/raleway"
            android:background="@drawable/background_button"
            android:textColor="#000"
            android:layout_marginTop="42dp" />
    </LinearLayout>
    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        app:SpinKit_Color="@color/textColorGrey"
        android:visibility="gone"
        android:elevation="200dp"
        style="@style/SpinKitView.Circle"/>
    <TextView
        android:id="@+id/terms_of_use_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term_od_use"
        android:textAlignment="center"
        android:layout_marginHorizontal="53dp"
        android:textColor="#EAEAEA"
        android:fontFamily="@font/raleway"
        android:textSize="13sp"
        android:layout_marginTop="280dp"/>
</LinearLayout>